# myproject

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  build.bat  build.sh  config.bat  main.c  python-3.10.4-embed-amd64.bat
